--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="container">
         <div id="question-screen">
             <h1>Beni Affeder Misin? 🥺</h1>
-            <p>Bir hata ettim, telafi etmek istiyorum.</p>
+            <p>Bilmeden söyledim telafi etmek istiyorum</p>
             <div class="buttons">
                 <button id="yesBtn">Evet</button>
                 <button id="noBtn">Hayır</button>
